#271 Elaborate community supporter and coordinator roles

--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -34,9 +34,12 @@ you can pick another license. We recommend having a look at https://choosealicen
 ### Initial proposal responsibilities
 The following roles are involved in a initial proposal:
 
-* Golden users: Comes with a use case that will serve as the first application of the virtual lab.
+* Community supporter: Reaches out to domain scientists who have the potential of becoming golden users.
+* Golden users: Have a use case that will serve as the first application of the virtual lab.
 Recruits a core development team.
-* Community supporter: Reaches out to domain scientists who have the potential  of becoming new virtual lab principal investigators.
+* Virtual lab coordinator: The virtual lab gets a coordinator assigned.
+Consults domain and technical experts to assess the whether running the virtual lab in NaaVRE is realistic.
+ The coordinator ensures the golden users are onboarded onto NaaVRE and the readiness level framework.
 * VRE DevOps engineer: Establish if NaaVRE can support to use case. Create an empty new virtual lab.
 
 ### Initial proposal milestones
