--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -14,7 +14,7 @@ The following should also be done phase:
   * Make data fair.
   * Follow the community standards of the relevant domains for reading, writing and exchanging data.
 * Metadata
-  * Complete all metadata fields
+  * Complete all metadata fields.
 * Scenarios
   * Make sure and describe how the virtual lab can be used on different scenarios, i.e. other datasets and with other parameters.
 * Versioning
@@ -37,11 +37,12 @@ The following should also be done phase:
 ### Validation phase responsibilities
 The following roles should be assigned during the validation phase:
 
-* Virtual lab owner / Principal investigator: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
-* Virtual lab core developers: Provide support to the virtual lab owner.
-* VRE researcher: Publishes a technical paper.
-* Virtual lab trainer: Once the virtual lab owner, and reviewers believe the virtual lab to be ready to be used by others,
-the virtual lab trainer tries out the virtual lab and makes suggestions. Helps the virtual lab owner identify issues arising when others start using the virtual lab.
+* Golden users: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
+* Virtual lab core developers: Provide support to the golden users.
+* Community supporter: Finds potential silver users to take part in the trainings in the next phase.
+* Virtual lab trainer: Tries out the virtual lab and makes suggestions. Helps the golden users identify issues arising when others start using the virtual lab.
+* VRE researcher: Potentially publishes a technical paper in addition to the domain paper.
+* Virtual lab coordinator: Ensures the community supporter is involved in the virtual lab and supports solving any issues arising.
 * VRE DevOps engineer: Support the core developers and golden user by providing advise and changing the virtual research environment where necessary.
 
 ### Exit condition
