#271 Elaborate infrastructure supporter role.

--- a/docs/readiness_levels/L1_co-development.mdx
+++ b/docs/readiness_levels/L1_co-development.mdx
@@ -37,6 +37,7 @@ The following roles should be assigned during co-development:
 * Virtual lab code reviewer: Provides feedback on the user-friendliness, maintainability, and robustness of the
 source code and other assets. We recommend starting with reviews early on in the development process, as this may contribute to a clear architecture, and good code quality.
 * Community supporter: Receives a demonstration of the virtual lab to gain insight in the virtual lab and potential use cases.
+* Infrastructure supporter: Advises and provides the infrastructure for the virtual lab.
 * Virtual lab coordinator: Coordinate the co-development between the golden users, core developers and DevOps engineers.
 * Virtual research environment (VRE) development and operations (DevOps) engineers: Support the creation of the new virtual lab
 by giving the core development team advice and changing the virtual research environment where necessary.
