--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -41,6 +41,7 @@ The following roles should be assigned during the validation phase:
 * Virtual lab core developers: Provide support to the golden users.
 * Community supporter: Finds potential silver users to take part in the trainings in the next phase.
 * Virtual lab trainer: Tries out the virtual lab and makes suggestions. Helps the golden users identify issues arising when others start using the virtual lab.
+* Infrastructure supporter: Prepares the infrastructure for the trainings.
 * VRE researcher: Potentially publishes a technical paper in addition to the domain paper.
 * Virtual lab coordinator: Ensures the community supporter is involved in the virtual lab and supports solving any issues arising.
 * VRE DevOps engineer: Support the core developers and golden user by providing advise and changing the virtual research environment where necessary.
