#271 Add first role page, refactor role text
Move description of community supporter to separate file to allow text reuse.

--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: L0 - initial proposal
 ---
+import { L0CommunitySupporter } from './Text_templates.js';
+
 ### Start situation
 A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct research.
 They will be selected, or reached out. The (golden) user will propose a virtual lab based on a scientific story
@@ -34,7 +36,7 @@ you can pick another license. We recommend having a look at https://choosealicen
 ### Initial proposal responsibilities
 The following roles are involved in a initial proposal:
 
-* Community supporter: Reaches out to domain scientists who have the potential of becoming golden users.
+* Community supporter: <L0CommunitySupporter/>
 * Golden users: Have a use case that will serve as the first application of the virtual lab.
 Recruits a core development team.
 * Virtual lab coordinator: The virtual lab gets a coordinator assigned.
