--- a/docs/readiness_levels/L1_co-development.mdx
+++ b/docs/readiness_levels/L1_co-development.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: L1 - Co-development
 ---
+import { L1CommunitySupporter } from  './Text_templates.js';
+
 ### Start situation
 Co-development of the new virtual lab can be started when a basic virtual lab has been provisioned with the customized libraries
  and configurations required by the development plan and a development team is ready to work on the subject.
@@ -36,7 +38,7 @@ The following roles should be assigned during co-development:
 * Virtual lab core developers: One or multiple core developers create a new virtual lab in NaaVRE.
 * Virtual lab code reviewer: Provides feedback on the user-friendliness, maintainability, and robustness of the
 source code and other assets. We recommend starting with reviews early on in the development process, as this may contribute to a clear architecture, and good code quality.
-* Community supporter: Receives a demonstration of the virtual lab to gain insight in the virtual lab and potential use cases.
+* Community supporter: <L1CommunitySupporter/>
 * Infrastructure supporter: Advises and provides the infrastructure for the virtual lab.
 * Virtual lab coordinator: Coordinate the co-development between the golden users, core developers and DevOps engineers.
 * Virtual research environment (VRE) development and operations (DevOps) engineers: Support the creation of the new virtual lab
