--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: L2 - Validation phase
 ---
+import { L2CommunitySupporter } from  './Text_templates.js';
+
 ### Start situation
 At the start of the validation phase, the virtual lab has the required components and the workflow has been developed and tested.
 Additionally the scientific (golden) user has made the data sets ready for the experiments.
@@ -39,7 +41,7 @@ The following roles should be assigned during the validation phase:
 
 * Golden users: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
 * Virtual lab core developers: Provide support to the golden users.
-* Community supporter: Finds potential silver users to take part in the trainings in the next phase.
+* Community supporter: <L2CommunitySupporter/>
 * Virtual lab trainer: Tries out the virtual lab and makes suggestions. Helps the golden users identify issues arising when others start using the virtual lab.
 * Infrastructure supporter: Prepares the infrastructure for the trainings.
 * VRE researcher: Potentially publishes a technical paper in addition to the domain paper.
