--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: L4 - Operational service
 ---
+import { L4CommunitySupporter } from  './Text_templates.js';
+
 ### Start situation
 At the start of the operational service phase, the lab has been tested by multiple users and the documentation has matured.
 
@@ -27,5 +29,6 @@ The following responsibilities should be assigned when the virtual lab is an ope
 
 * Virtual lab owner / Principal investigator: Coordinates the further development of the virtual lab with a scientific vision.
 * User supporter: Is the primary point of contact in case any problems arise with the virtual lab.
+* Community supporter: <L4CommunitySupporter/>
 * Virtual lab coordinator: Ensures the VRE keeps supporting the virtual lab.
 * Infrastructure supporter: Monitors, provides, and adjusts infrastructure for the virtual lab.
