--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -42,7 +42,7 @@ one role for the virtual lab, while others might have multiple of the following 
   new virtual lab and conducts research in that virtual lab.
   * **Silver user:** Starts using a virtual lab developed by others for their own scientific scenarios at an early stage.
   Learns how to use the virtual lab through a workshop, training or hackathon.
-  * ***Ivory user:** Other users that visit or use the virtual lab in a later stage.
+  * **Ivory user:** Other users that visit or use the virtual lab in a later stage.
 * **Virtual lab development roles:** Roles involved in the creation of a new virtual lab.
   * **Virtual lab principal investigator:** Coordinates the development of the virtual lab with a scientific vision.
   This will often be the golden user, i.e. the person that provides the initial publishable use case of the virtual lab.
@@ -50,7 +50,7 @@ one role for the virtual lab, while others might have multiple of the following 
   * **Virtual lab code reviewers:** Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
   source code and other assets.
 * **Virtual lab support roles:** Roles to support development and use of virtual labs.
-  * **Community supporter:** Forms connections between users and the virtual lab.
+  * [Community supporter](Virtual_lab_roles/Community_supporter): Forms connections between users and the virtual lab.
   * **Virtual lab trainer:** Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
   * **Virtual lab coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
   * **Virtual research environment development and operations (VRE DevOps) engineer:** Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
@@ -66,7 +66,7 @@ For each higher readiness level improvements are be made to the assets and docum
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
 <ul style={{ listStyleType: 'none' }}>
-    <li> <div style={{ transform: 'scale(0.5)', display: 'inline' }}><Downward_arrow/></div> [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup. </li>
+    <li> <Downward_arrow/> [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup. </li>
     <li> <Downward_arrow/> [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments. </li>
     <li> <Downward_arrow/> [L2 - Validation phase](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications. </li>
     <li> <Downward_arrow/> [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. </li>
