#271 Put text in downward arrows, refactor

--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -1,6 +1,6 @@
 # Readiness level framework for virtual labs on the NaaVRE platform
 
-import Downward_arrow from './images/Downward_arrow.drawio.svg';
+import Downward_arrow from './svgs/Downward_arrow.js';
 
 Version 0.0.2
 
@@ -66,11 +66,11 @@ For each higher readiness level improvements are be made to the assets and docum
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
 <ul style={{ listStyleType: 'none' }}>
-    <li> <Downward_arrow/> [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup. </li>
-    <li> <Downward_arrow/> [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments. </li>
-    <li> <Downward_arrow/> [L2 - Validation phase](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications. </li>
-    <li> <Downward_arrow/> [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. </li>
-    <li> <Downward_arrow/> [L4 - Operational service](readiness_levels/L4_operational_service): A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public. </li>
+    <li> <Downward_arrow text="L0"/> [Initial proposal](readiness_levels/L0_initial_proposal): <div>The initial proposal of a virtual lab, with conceptual definition but no technical setup. </div></li>
+    <li> <Downward_arrow text="L1"/> [Co-development](readiness_levels/L1_co-development): <div>A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments. </div></li>
+    <li> <Downward_arrow text="L2"/> [Validation phase](readiness_levels/L2_validation_phase): <div>A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications. </div></li>
+    <li> <Downward_arrow text="L3"/> [Workshop use](readiness_levels/L3_workshop_use): <div>A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. </div></li>
+    <li> <Downward_arrow text="L4"/> [Operational service](readiness_levels/L4_operational_service): <div>A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public. </div></li>
 </ul>
 
 | Level | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
