#Refactor Responsibilities/ Text templates

--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: L2 - Validation phase
 ---
-import { L2CommunitySupporter } from  './Text_templates.js';
+import * as Responsibilities from './Responsibilities.js';
 
 ### Start situation
 At the start of the validation phase, the virtual lab has the required components and the workflow has been developed and tested.
@@ -41,7 +41,7 @@ The following roles should be assigned during the validation phase:
 
 * Golden users: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
 * Virtual lab core developers: Provide support to the golden users.
-* Community supporter: <L2CommunitySupporter/>
+* Community supporter: <Responsibilities.L2CommunitySupporter/>
 * Virtual lab trainer: Tries out the virtual lab and makes suggestions. Helps the golden users identify issues arising when others start using the virtual lab.
 * Infrastructure supporter: Prepares the infrastructure for the trainings.
 * VRE researcher: Potentially publishes a technical paper in addition to the domain paper.
