--- a/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
@@ -2,11 +2,11 @@
 sidebar_position: 1
 title: Community supporter
 ---
-import { L0CommunitySupporter, L1CommunitySupporter, L2CommunitySupporter, L3CommunitySupporter, L4CommunitySupporter } from  './../Text_templates.js';
+import * as Responsibilities from  './../Responsibilities.js';
 
 The community support has the following responsibilities per level:
-- L0: <L0CommunitySupporter/>
-- L1: <L1CommunitySupporter/>
-- l2: <L2CommunitySupporter/>
-- L3: <L3CommunitySupporter/>
-- L4: <L4CommunitySupporter/>
+- L0: <Responsibilities.L0CommunitySupporter/>
+- L1: <Responsibilities.L1CommunitySupporter/>
+- l2: <Responsibilities.L2CommunitySupporter/>
+- L3: <Responsibilities.L3CommunitySupporter/>
+- L4: <Responsibilities.L4CommunitySupporter/>
