--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: L0 - initial proposal
 ---
-import { L0CommunitySupporter } from './Text_templates.js';
+import * as Responsibilities from './Responsibilities.js';
 
 ### Start situation
 A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct research.
@@ -36,9 +36,8 @@ you can pick another license. We recommend having a look at https://choosealicen
 ### Initial proposal responsibilities
 The following roles are involved in a initial proposal:
 
-* Community supporter: <L0CommunitySupporter/>
-* Golden users: Have a use case that will serve as the first application of the virtual lab.
-Recruits a core development team.
+* Community supporter: <Responsibilities.L0CommunitySupporter/>
+* Golden users: <Responsibilities.L0GoldenUser/>
 * Virtual lab coordinator: The virtual lab gets a coordinator assigned.
 Consults domain and technical experts to assess the whether running the virtual lab in NaaVRE is realistic.
  The coordinator ensures the golden users are onboarded onto NaaVRE and the readiness level framework.
