--- a/docs/readiness_levels/L1_co-development.mdx
+++ b/docs/readiness_levels/L1_co-development.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: L1 - Co-development
 ---
-import { L1CommunitySupporter } from  './Text_templates.js';
+import * as Responsibilities from './Responsibilities.js';
 
 ### Start situation
 Co-development of the new virtual lab can be started when a basic virtual lab has been provisioned with the customized libraries
@@ -34,11 +34,11 @@ Where possible, the following should be done while building the virtual lab:
 ### Co-development responsibilities
 The following roles should be assigned during co-development:
 
-* Golden users: Guide the development of the lab from the scientific viewpoint.
+* Golden users: <Responsibilities.L1GoldenUser/>
 * Virtual lab core developers: One or multiple core developers create a new virtual lab in NaaVRE.
 * Virtual lab code reviewer: Provides feedback on the user-friendliness, maintainability, and robustness of the
 source code and other assets. We recommend starting with reviews early on in the development process, as this may contribute to a clear architecture, and good code quality.
-* Community supporter: <L1CommunitySupporter/>
+* Community supporter: <Responsibilities.L1CommunitySupporter/>
 * Infrastructure supporter: Advises and provides the infrastructure for the virtual lab.
 * Virtual lab coordinator: Coordinate the co-development between the golden users, core developers and DevOps engineers.
 * Virtual research environment (VRE) development and operations (DevOps) engineers: Support the creation of the new virtual lab
