--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: L3 - Workshop use
 ---
-import { L3CommunitySupporter } from  './Text_templates.js';
+import * as Responsibilities from './Responsibilities.js';
 
 ### Start situation
 At the start of level 3, the documentation and scientific publication is ready for silver users to learn the practices in workshops, trainings, and hackathons.
@@ -28,7 +28,7 @@ The following responsibilities should be assigned during workshop use:
 * Golden users: The golden users who have used the virtual lab for their own investigations,
 will appoint or approve a principal investogator for the virtual lab.
 * Virtual lab principal investigator: Gathers user feedback and determines how to facilitate other users in the virtual lab.
-* Community supporter: <L3CommunitySupporter/>
+* Community supporter: <Responsibilities.L3CommunitySupporter/>
 * Virtual lab trainer: Gives trainings to users. Can point out what the user can change and can not change in the lab.
 * User supporter: Answers any technical questions arising from the workshop use which the trainer can not answer.
 * Infrastructure supporter: Ensures the infrastructure can support the training sessions.
