#271 Add role pages, refactor responsibilities

--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -38,10 +38,8 @@ The following roles are involved in a initial proposal:
 
 * Community supporter: <Responsibilities.L0CommunitySupporter/>
 * Golden users: <Responsibilities.L0GoldenUser/>
-* Virtual lab coordinator: The virtual lab gets a coordinator assigned.
-Consults domain and technical experts to assess the whether running the virtual lab in NaaVRE is realistic.
- The coordinator ensures the golden users are onboarded onto NaaVRE and the readiness level framework.
-* VRE DevOps engineer: Establish if NaaVRE can support to use case. Create an empty new virtual lab.
+* Virtual lab coordinator: <Responsibilities.L0Coordinator/>
+* VRE DevOps engineer: <Responsibilities.L0DevOps/>
 
 ### Initial proposal milestones
 The following milestones can be achieved during the phase L0 of virtual lab development:
