--- a/docs/readiness_levels/L1_co-development.mdx
+++ b/docs/readiness_levels/L1_co-development.mdx
@@ -35,15 +35,12 @@ Where possible, the following should be done while building the virtual lab:
 The following roles should be assigned during co-development:
 
 * Golden users: <Responsibilities.L1GoldenUser/>
-* Virtual lab core developers: One or multiple core developers create a new virtual lab in NaaVRE.
-* Virtual lab code reviewer: Provides feedback on the user-friendliness, maintainability, and robustness of the
-source code and other assets. We recommend starting with reviews early on in the development process, as this may contribute to a clear architecture, and good code quality.
+* Virtual lab core developers: <Responsibilities.L1CoreDeveloper/>
+* Virtual lab code reviewer: <Responsibilities.L1Reviewer/>
 * Community supporter: <Responsibilities.L1CommunitySupporter/>
-* Infrastructure supporter: Advises and provides the infrastructure for the virtual lab.
-* Virtual lab coordinator: Coordinate the co-development between the golden users, core developers and DevOps engineers.
-* Virtual research environment (VRE) development and operations (DevOps) engineers: Support the creation of the new virtual lab
-by giving the core development team advice and changing the virtual research environment where necessary.
-    Advice on the right infrastructure for the virtual lab.
+* Infrastructure supporter: <Responsibilities.L1InfrastructureSupporter/>
+* Virtual lab coordinator: <Responsibilities.L1Coordinator/>
+* Virtual research environment (VRE) development and operations (DevOps) engineers: <Responsibilities.L1DevOps/>
 
 ### Co-development milestones
 Two milestones should be reached during co-development:
