--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -39,14 +39,14 @@ The following should also be done phase:
 ### Validation phase responsibilities
 The following roles should be assigned during the validation phase:
 
-* Golden users: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
-* Virtual lab core developers: Provide support to the golden users.
+* Golden users: <Responsibilities.L2GoldenUser/>
+* Virtual lab core developers: <Responsibilities.L2CoreDeveloper/>
 * Community supporter: <Responsibilities.L2CommunitySupporter/>
-* Virtual lab trainer: Tries out the virtual lab and makes suggestions. Helps the golden users identify issues arising when others start using the virtual lab.
-* Infrastructure supporter: Prepares the infrastructure for the trainings.
-* VRE researcher: Potentially publishes a technical paper in addition to the domain paper.
-* Virtual lab coordinator: Ensures the community supporter is involved in the virtual lab and supports solving any issues arising.
-* VRE DevOps engineer: Support the core developers and golden user by providing advise and changing the virtual research environment where necessary.
+* Virtual lab trainer: <Responsibilities.L2Trainer/>
+* Infrastructure supporter: <Responsibilities.L2InfrastructureSupporter/>
+* VRE researcher: <Responsibilities.L2VREResearcher/>
+* Virtual lab coordinator: <Responsibilities.L2Coordinator/>
+* VRE DevOps engineer: <Responsibilities.L2DevOps/>
 
 ### Exit condition
 The virtual lab transitions to workshop use, once the validation has been done and a scientific paper is ready for publication.
