--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -27,8 +27,8 @@ they can contact LifeWatch to discuss the possibilities of creating a new virtua
 ### Operational service responsibilities
 The following responsibilities should be assigned when the virtual lab is an operational service:
 
-* Virtual lab owner / Principal investigator: Coordinates the further development of the virtual lab with a scientific vision.
-* User supporter: Is the primary point of contact in case any problems arise with the virtual lab.
+* Principal investigator: <Responsibilities.L4PrincipalInvestigator/>
+* User supporter: <Responsibilities.L4UserSupporter/>
 * Community supporter: <Responsibilities.L4CommunitySupporter/>
-* Virtual lab coordinator: Ensures the VRE keeps supporting the virtual lab.
-* Infrastructure supporter: Monitors, provides, and adjusts infrastructure for the virtual lab.
+* Virtual lab coordinator: <Responsibilities.L4Coordinator/>
+* Infrastructure supporter: <Responsibilities.L4InfrastructureSupporter/>
