--- a/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
@@ -4,7 +4,7 @@ title: Community supporter
 ---
 import * as Responsibilities from  './../Responsibilities.js';
 
-The community support has the following responsibilities per level:
+The community supporter has the following responsibilities per level:
 - L0: <Responsibilities.L0CommunitySupporter/>
 - L1: <Responsibilities.L1CommunitySupporter/>
 - l2: <Responsibilities.L2CommunitySupporter/>
