--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -25,15 +25,13 @@ Additionally, user feedback should be gathered and processed.
 ### Workshop use responsibilities
 The following responsibilities should be assigned during workshop use:
 
-* Golden users: The golden users who have used the virtual lab for their own investigations,
-will appoint or approve a principal investogator for the virtual lab.
-* Virtual lab principal investigator: Gathers user feedback and determines how to facilitate other users in the virtual lab.
+* Golden users: <Responsibilities.L3GoldenUser/>
+* Virtual lab principal investigator: <Responsibilities.L3PrincipalInvestigator/>
 * Community supporter: <Responsibilities.L3CommunitySupporter/>
-* Virtual lab trainer: Gives trainings to users. Can point out what the user can change and can not change in the lab.
-* User supporter: Answers any technical questions arising from the workshop use which the trainer can not answer.
-* Infrastructure supporter: Ensures the infrastructure can support the training sessions.
-* Virtual lab coordinator: Monitors the virtual lab and any problems arising during training.
-Checks whether the needed principal investigator and user community emerges during this phase that provides a use case for maturing the virtual lab further.
+* Virtual lab trainer: <Responsibilities.L3Trainer/>
+* User supporter: <Responsibilities.L3UserSupporter/>
+* Infrastructure supporter: <Responsibilities.L3InfrastructureSupporter/>
+* Virtual lab coordinator: <Responsibilities.L3Coordinator/>
 
 ### Exit conditions
 The virtual lab becomes an operational service if scientists taking part in the workshops, trainings, and hackathons
