--- a/docs/readiness_levels/Virtual_lab_roles/DevOps.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/DevOps.mdx
@@ -7,4 +7,4 @@ import * as Responsibilities from  './../Responsibilities.js';
 The VRE DevOps engineers have the following responsibilities per level:
 - L0: <Responsibilities.L0DevOps/>
 - L1: <Responsibilities.L1DevOps/>
-- l2: <Responsibilities.L2DevOps/>
+- L2: <Responsibilities.L2DevOps/>
