#271 Add role timeline image

--- a/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
@@ -6,4 +6,4 @@ import * as Responsibilities from  './../Responsibilities.js';
 
 The core developers have the following responsibilities per level:
 - L1: <Responsibilities.L1CoreDeveloper/>
-- l2: <Responsibilities.L2CoreDeveloper/>
+- L2: <Responsibilities.L2CoreDeveloper/>
