--- a/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
@@ -4,7 +4,7 @@ title: Golden user
 ---
 import * as Responsibilities from  './../Responsibilities.js';
 
-The golden users have the following responsibilities per level:
+Golden users have the following responsibilities per level:
 - L0: <Responsibilities.L0GoldenUser/>
 - L1: <Responsibilities.L1GoldenUser/>
 - l2: <Responsibilities.L2GoldenUser/>
