--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -38,26 +38,26 @@ Our platform needs contributions from the multiple roles to enable innovative re
 one role for the virtual lab, while others might have multiple of the following roles:
 
 * **Virtual lab usage roles:** Roles of people who use an existing virtual lab for their own research.
-  * **Golden user:** Provides a scientific scenario that can best be investigated in NaaVRE. Is involved in developing a
+  * [Golden user](Virtual_lab_roles/Golden_user): Provides a scientific scenario that can best be investigated in NaaVRE. Is involved in developing a
   new virtual lab and conducts research in that virtual lab.
   * **Silver user:** Starts using a virtual lab developed by others for their own scientific scenarios at an early stage.
   Learns how to use the virtual lab through a workshop, training or hackathon.
   * **Ivory user:** Other users that visit or use the virtual lab in a later stage.
 * **Virtual lab development roles:** Roles involved in the creation of a new virtual lab.
-  * **Virtual lab principal investigator:** Coordinates the development of the virtual lab with a scientific vision.
+  * [Virtual lab principal investigator](Virtual_lab_roles/Principal_investogator): Coordinates the development of the virtual lab with a scientific vision.
   This will often be the golden user, i.e. the person that provides the initial publishable use case of the virtual lab.
-  * **Virtual lab core developers:** Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
-  * **Virtual lab code reviewers:** Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
+  * [Virtual lab core developers](Virtual_lab_roles/Core_developer): Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
+  * [Virtual lab code reviewers](Virtual_lab_roles/Reviewer): Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
   source code and other assets.
 * **Virtual lab support roles:** Roles to support development and use of virtual labs.
   * [Community supporter](Virtual_lab_roles/Community_supporter): Forms connections between users and the virtual lab.
-  * **Virtual lab trainer:** Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
-  * **Virtual lab coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
-  * **Virtual research environment development and operations (VRE DevOps) engineer:** Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
-  * **VRE researcher:** Contribute state-of-the-art components to the NaaVRE and can publish technical papers
+  * [Virtual lab trainer](Virtual_lab_roles/Trainer): Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
+  * [Virtual lab coordinator](Virtual_lab_roles/Coordinator): Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
+  * [Virtual research environment development and operations (VRE DevOps) engineer](Virtual_lab_roles/DevOps): Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
+  * [VRE researcher](Virtual_lab_roles/VRE_researcher): Contribute state-of-the-art components to the NaaVRE and can publish technical papers
   that demonstrate the relevance of NaaVRE in the field of networked systems.
-  * **User supporter:** Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
-  * **Infrastructure supporter:** Ensures there is infrastructure that allows the virtual lab to be used by multiple users.
+  * [User supporter](Virtual_lab_roles/User_supporter): Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
+  * [Infrastructure supporter](Virtual_lab_roles/Infrastructure_supporter): Ensures there is infrastructure that allows the virtual lab to be used by multiple users.
   * **Infrastructure provider:** Provides infrastructure for the virtual lab.
 
 ## Readiness levels
@@ -84,15 +84,17 @@ with an increasing amount of independence from the virtual lab core developers a
 Table 1: Summary of readiness levels, with duration, number of developers and users,
 how the context of the lab is communicated with the outside world, and what conditions per transition should be met.
 
-![ images/NaaVRE_development_cycle.drawio.png not found](images/NaaVRE_development_cycle.drawio.png)
-
-Figure1: The virtual lab moves through the readiness levels, from initial proposal to operational service.
+![ images/NaaVRE_development_cycle.drawio.png not found](images/NaaVRE_development_cycle.drawio.png)<br/>
+*Figure 1: The virtual lab moves through the readiness levels, from initial proposal to operational service.
 Users coming up with ideas for new experiments that can not be done in the existing virtual labs,
-can, in collaboration with LifeWatch, create a new virtual lab that fits their needs.
+can, in collaboration with LifeWatch, create a new virtual lab that fits their needs.*
 
 Virtual labs do not need to reach operational service to be successful. A lab could also be the perfect fit for the scientific
 scenario of the golden users, but not have any other users who can apply it in their own research.
 It is important to weigh the scientific benefits of advancing a virtual lab to the next readiness level to the effort and cost involved in doing that.
+
+![ images/Timeline.drawio.png not found](images/Timeline.drawio.png)<br/>
+*Figure 2: Timeline per readiness level showing what roles are involved in what stage.*
 
 ## Sources
 * These recommendations are partially based on ideas presented in the paper [Introducing the FAIR Principles for research software](https://www.nature.com/articles/s41597-022-01710-x), the [Fair software checklist](https://fairsoftwarechecklist.net/v0.2/), and [fair-software.eu](https://fair-software.eu/recommendations/license).
