#271 Replace principal investigator by scientific steering board

--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -26,7 +26,7 @@ Additionally, user feedback should be gathered and processed.
 The following responsibilities should be assigned during workshop use:
 
 * Golden users: <Responsibilities.L3GoldenUser/>
-* Virtual lab principal investigator: <Responsibilities.L3PrincipalInvestigator/>
+* Scientific steering board: <Responsibilities.L3SteeringBoard/>
 * Community supporter: <Responsibilities.L3CommunitySupporter/>
 * Virtual lab trainer: <Responsibilities.L3Trainer/>
 * User supporter: <Responsibilities.L3UserSupporter/>
@@ -40,7 +40,7 @@ In case none of the silver users keeps using the virtual labs after the workshop
 All previous criteria apply in addition to the following:
 
 * Community
-  * [ ] There is a virtual lab principal investogator or community of scientists who are willing to take care of the scientific
+  * [ ] There is a scientific steering board who are willing to take care of the scientific
   direction of the virtual lab.
   * [ ] The is a community of users who benefit from doing their research in the virtual lab.
 * Dependencies
