--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -27,7 +27,7 @@ they can contact LifeWatch to discuss the possibilities of creating a new virtua
 ### Operational service responsibilities
 The following responsibilities should be assigned when the virtual lab is an operational service:
 
-* Principal investigator: <Responsibilities.L4PrincipalInvestigator/>
+* Scientific steering board: <Responsibilities.L4SteeringBoard/>
 * User supporter: <Responsibilities.L4UserSupporter/>
 * Community supporter: <Responsibilities.L4CommunitySupporter/>
 * Virtual lab coordinator: <Responsibilities.L4Coordinator/>
