--- a/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
@@ -7,5 +7,5 @@ import * as Responsibilities from  './../Responsibilities.js';
 Golden users have the following responsibilities per level:
 - L0: <Responsibilities.L0GoldenUser/>
 - L1: <Responsibilities.L1GoldenUser/>
-- l2: <Responsibilities.L2GoldenUser/>
+- L2: <Responsibilities.L2GoldenUser/>
 - L3: <Responsibilities.L3GoldenUser/>
