--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -44,8 +44,7 @@ one role for the virtual lab, while others might have multiple of the following 
   Learns how to use the virtual lab through a workshop, training or hackathon.
   * **Ivory user:** Other users that visit or use the virtual lab in a later stage.
 * **Virtual lab development roles:** Roles involved in the creation of a new virtual lab.
-  * [Virtual lab principal investigator](Virtual_lab_roles/Principal_investogator): Coordinates the development of the virtual lab with a scientific vision.
-  This will often be the golden user, i.e. the person that provides the initial publishable use case of the virtual lab.
+  * [Scientific steering board](Virtual_lab_roles/Steering_board): Coordinates the development of the virtual lab with a scientific vision.
   * [Virtual lab core developers](Virtual_lab_roles/Core_developer): Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
   * [Virtual lab code reviewers](Virtual_lab_roles/Reviewer): Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
   source code and other assets.
@@ -94,7 +93,7 @@ scenario of the golden users, but not have any other users who can apply it in t
 It is important to weigh the scientific benefits of advancing a virtual lab to the next readiness level to the effort and cost involved in doing that.
 
 ![ images/Timeline.drawio.png not found](images/Timeline.drawio.png)<br/>
-*Figure 2: Timeline per readiness level showing what roles are involved in what stage.*
+*Figure 2: Timeline per readiness level showing the timing of role involvement.*
 
 ## Sources
 * These recommendations are partially based on ideas presented in the paper [Introducing the FAIR Principles for research software](https://www.nature.com/articles/s41597-022-01710-x), the [Fair software checklist](https://fairsoftwarechecklist.net/v0.2/), and [fair-software.eu](https://fair-software.eu/recommendations/license).
