--- a/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Community_supporter.mdx
@@ -7,6 +7,6 @@ import * as Responsibilities from  './../Responsibilities.js';
 The community supporter has the following responsibilities per level:
 - L0: <Responsibilities.L0CommunitySupporter/>
 - L1: <Responsibilities.L1CommunitySupporter/>
-- l2: <Responsibilities.L2CommunitySupporter/>
+- L2: <Responsibilities.L2CommunitySupporter/>
 - L3: <Responsibilities.L3CommunitySupporter/>
 - L4: <Responsibilities.L4CommunitySupporter/>
