--- a/docs/readiness_levels/Virtual_lab_roles/Coordinator.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Coordinator.mdx
@@ -7,6 +7,6 @@ import * as Responsibilities from  './../Responsibilities.js';
 The virtual lab coordinator has the following responsibilities per level:
 - L0: <Responsibilities.L0Coordinator/>
 - L1: <Responsibilities.L1Coordinator/>
-- l2: <Responsibilities.L2Coordinator/>
+- L2: <Responsibilities.L2Coordinator/>
 - L3: <Responsibilities.L3Coordinator/>
 - L4: <Responsibilities.L4Coordinator/>
