#271 Add 'co-development'  to title

--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -18,11 +18,11 @@ The following should be done during operational service:
 ### Operational service milestones
 The following milestones can occur when a virtual lab runs as an operational service:
 
-* Users of the virtual lab successfully run their own scenarios in the virtual lab.
-* Virtual lab developers make their own modifications to the virtual lab to facilitate their research.
+* Silver and ivory users successfully run their own scenarios in the virtual lab.
+* Silver and ivory users make their own modifications to the virtual lab to facilitate their research.
 * Users come up with ideas that spawn the creation of a new virtual lab:
 Whenever users of the virtual lab come up with a new idea that does not fit in the possibilities of existing virtual labs,
-they can contact LifeWatch to discuss the possibilities of creating a new virtual lab.
+they can contact the community supporter or virtual lab coordinator to discuss the possibilities of creating a new virtual lab.
 
 ### Operational service responsibilities
 The following responsibilities should be assigned when the virtual lab is an operational service:
