--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -1,4 +1,4 @@
-# Readiness level framework for virtual labs on the NaaVRE platform
+# Readiness level framework for co-development of virtual labs on the NaaVRE platform
 
 import Downward_arrow from './svgs/Downward_arrow.js';
 
